--- a/src/views/main.css
+++ b/src/views/main.css
@@ -8,7 +8,7 @@
     min-width: 80px;
     padding-left: .25rem;
     position: absolute;
-    top: 185px;
+    top: 240px;
     z-index:3;
   }
 }
@@ -18,6 +18,7 @@
   min-width: 300px;
   padding-left: 0;
   padding-right: 0;
+  z-index: 7;
   @media screen and (max-width: 650px) {
     width: 100%;
     max-width: 100%;
@@ -60,6 +61,7 @@
 
 :local .address-search-container {
   left: 0;
+  z-index: 3;
 
   :global div.absolute {
     padding-left: 4rem;
@@ -67,7 +69,7 @@
 
   @media screen and (max-width: 650px) {
     left: 0;
-    z-index: 100;
+    z-index: 4;
     :global div.absolute {
       padding-left: .5rem;
       display: block !important;
